acvm-repo/msgpack_tagged/tests/compile_fail/tag_out_of_range.stderr
error: number too large to fit in target type
 --> tests/compile_fail/tag_out_of_range.rs:9:11
  |
9 |     #[tag(300)]
  |           ^^^
